feat: add sitemap to head

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -18,6 +18,7 @@ const canonicalUrl = new URL(Astro.request.url, Astro.site).toString();
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="sitemap" href="/sitemap-index.xml" />
 
     <!-- Primary SEO Meta Tags -->
     <title>{pageTitle}</title>
